--- a/_/DEBIAN/control
+++ b/_/DEBIAN/control
@@ -1,11 +1,13 @@
-Package: com.greeny.autostatisticsreset
-Name: AutoStatisticsReset
-Depends: mobilesubstrate, com.a3tweaks.flipswitch
+Package: com.greeny.restats
+Name: ReStats
+Depends: mobilesubstrate, com.a3tweaks.flipswitch, ws.hbang.common
+Conflicts: com.greeny.autostatisticsreset
 Architecture: iphoneos-arm
 Description: Automatically reset Cellular statistics on a certain day!
 Maintainer: GreenyDev
 Author: GreenyDev
-Depiction: http://greenydev.github.io/repo/autostatisticsreset/index.html
+Depiction: http://greenydev.github.io/repo/restats/Index.html
+Icon: file:///Library/PreferenceBundles/RCSPrefs.bundle/RCSPrefs@3x.png
 Section: Tweaks
-Version: 0.0.1-33
-Installed-Size: 280
+Version: 0.0.1-25
+Installed-Size: 444
