--- a/rcsprefs/Resources/RCSDevelopers.plist
+++ b/rcsprefs/Resources/RCSDevelopers.plist
@@ -1,48 +1,63 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
-<dict>
-	<key>items</key>
-	<array>
-		<dict>
-			<key>cell</key>
-			<string>PSLinkCell</string>
-			<key>cellClass</key>
-			<string>GreenyDev</string>
-			<key>height</key>
-			<integer>100</integer>
-			<key>detail</key>
-			<string>GreenyTwitter</string> 		
-		</dict>
-		<dict>
-			<key>cell</key>
-			<string>PSGroupCell</string>
-			<key>footerCellClass</key>
-			<string>WithHelpFromCell</string>
-		</dict>
-						<dict>
-			<key>cell</key>
-			<string>PSGroupCell</string>
-		</dict>
-		         <dict>
-            <key>cell</key>
-            <string>PSGroupCell</string>
-            <key>footerText</key>
-            <string>^ I need to fix this :/</string>
-        </dict>
-
-		<dict>
-			<key>cell</key>
-			<string>PSLinkCell</string>
-			<key>cellClass</key>
-			<string>SHIVADOC</string>
-			<key>height</key>
-			<integer>100</integer>	
-			<key>detail</key>
-			<string>SHIVADOCReddit</string> 	
-		</dict>		
-	</array>
-	<key>title</key>
-	<string>Developers</string>
-</dict>
+	<dict>
+		<key>items</key>
+		<array>
+			<dict>
+				<key>cell</key>
+				<string>PSLinkCell</string>
+				<key>cellClass</key>
+				<string>GreenyDev</string>
+				<key>height</key>
+				<integer>100</integer>
+				<key>detail</key>
+				<string>GreenyTwitter</string> 		
+			</dict>
+			<dict>
+				<key>cell</key>
+				<string>PSGroupCell</string>
+				<key>footerText</key>
+				<string>With help from:</string>
+				<key>footerAlignment</key>
+				<integer>1</integer>
+			</dict>
+			<dict>
+				<key>cell</key>
+				<string>PSGroupCell</string>
+			</dict>
+			<dict>
+				<key>cell</key>
+				<string>PSLinkCell</string>
+				<key>cellClass</key>
+				<string>SHIVADOC</string>
+				<key>height</key>
+				<integer>100</integer>	
+				<key>detail</key>
+				<string>SHIVADOCReddit</string> 	
+			</dict>
+			<dict>
+				<key>cell</key>
+				<string>PSLinkCell</string>
+				<key>cellClass</key>
+				<string>MD</string>
+				<key>height</key>
+				<integer>100</integer>	
+				<key>detail</key>
+				<string>MDTwitter</string> 	
+			</dict>
+			<dict>
+				<key>cell</key>
+				<string>PSLinkCell</string>
+				<key>cellClass</key>
+				<string>BrandonMartin</string>
+				<key>height</key>
+				<integer>100</integer>
+				<key>detail</key>
+				<string>BrandonMartinTwitter</string> 		
+			</dict>		
+		</array>
+		<key>title</key>
+		<string>Developers</string>
+	</dict>
 </plist>
