--- a/rcsprefs/entry.plist
+++ b/rcsprefs/entry.plist
@@ -5,6 +5,6 @@
 	detail = RCSPrefsListController;
 	icon = RCSPrefs.png;
 	isController = 1;
-	label = AutoStatisticsReset;
+	label = ReStats;
     };
 }
