--- a/rrcsprefs/Resources/RRCSDevelopers.plist
+++ b/rrcsprefs/Resources/RRCSDevelopers.plist
@@ -12,7 +12,17 @@
 				<key>height</key>
 				<integer>100</integer>
 				<key>detail</key>
-				<string>GreenyTwitter</string> 		
+				<string>GreenyTwitter</string>
+			</dict>
+			<dict>
+				<key>cell</key>
+				<string>PSLinkCell</string>
+				<key>cellClass</key>
+				<string>SatohDev</string>
+				<key>height</key>
+				<integer>100</integer>
+				<key>detail</key>
+				<string>SatohTwitter</string>
 			</dict>
 			<dict>
 				<key>cell</key>
@@ -32,9 +42,9 @@
 				<key>cellClass</key>
 				<string>SHIVADOC</string>
 				<key>height</key>
-				<integer>100</integer>	
+				<integer>100</integer>
 				<key>detail</key>
-				<string>SHIVADOCReddit</string> 	
+				<string>SHIVADOCReddit</string>
 			</dict>
 			<dict>
 				<key>cell</key>
@@ -42,9 +52,9 @@
 				<key>cellClass</key>
 				<string>MD</string>
 				<key>height</key>
-				<integer>100</integer>	
+				<integer>100</integer>
 				<key>detail</key>
-				<string>MDTwitter</string> 	
+				<string>MDTwitter</string>
 			</dict>
 			<dict>
 				<key>cell</key>
@@ -54,8 +64,8 @@
 				<key>height</key>
 				<integer>100</integer>
 				<key>detail</key>
-				<string>BrandonMartinTwitter</string> 		
-			</dict>		
+				<string>BrandonMartinTwitter</string>
+			</dict>
 		</array>
 		<key>title</key>
 		<string>Developers</string>
