--- a/rrcsprefs/Resources/RRCSPrefs.plist
+++ b/rrcsprefs/Resources/RRCSPrefs.plist
@@ -4,17 +4,25 @@
 <dict>
 	<key>items</key>
 	<array>
+	    <dict>
+                <key>cell</key>
+                <string>PSDefaultCell</string>
+                <key>cellClass</key>
+                <string>RRCSHeaderCell</string>
+                <key>height</key>
+                <string>125</string>
+            </dict>
 		<dict>
 			<key>cell</key>
 			<string>PSGroupCell</string>
 		</dict>
 		<dict>
 			<key>PostNotification</key>
-			<string>com.greeny.ReStats/prefsChanged</string>
+			<string>jp.soh.ReStatsReborn/prefsChanged</string>
 			<key>label</key>
 			<string>Cycle...</string>
 			<key>defaults</key>
-			<string>com.greeny.ReStats</string>
+			<string>jp.soh.ReStatsReborn</string>
 			<key>default</key>
 			<string>0</string>
 			<key>key</key>
@@ -41,7 +49,7 @@ If you set this for the 24th of January and monthly, it will go off on the 24th 
 		</dict>
 		<dict>
 			<key>cellClass</key>
-			<string>RCSDatePickerCell</string>
+			<string>RRCSDatePickerCell</string>
 			<key>cell</key>
 			<string>PSEditTextCell</string>
 			<key>key</key>
@@ -49,7 +57,7 @@ If you set this for the 24th of January and monthly, it will go off on the 24th 
 			<key>label</key>
 			<string>Data Reset Date</string>
 			<key>defaults</key>
-			<string>com.greeny.ReStats</string>
+			<string>jp.soh.ReStatsReborn</string>
 			<key>get</key>
 			<string>datePickerStringValue:</string>
 			<key>set</key>
@@ -85,7 +93,7 @@ If you set this for the 24th of January and monthly, it will go off on the 24th 
 			<key>cell</key>
 			<string>PSLinkCell</string>
 			<key>detail</key>
-			<string>RCSDevelopersListController</string>
+			<string>RRCSDevelopersListController</string>
 			<key>label</key>
 			<string>Developers</string>
 		</dict>
@@ -93,7 +101,7 @@ If you set this for the 24th of January and monthly, it will go off on the 24th 
 			<key>cell</key>
 			<string>PSGroupCell</string>
 			<key>footerText</key>
-			<string>If you appreciate my work, please use this button to donate to me.</string>
+			<string>If you appreciate this tweak, please use this button to donate to the original developer.</string>
 		</dict>
 		<dict>
 			<key>cell</key>
@@ -121,6 +129,6 @@ If you set this for the 24th of January and monthly, it will go off on the 24th 
 		</dict>
 	</array>
 	<key>title</key>
-	<string>ReStats</string>
+	<string>ReStats Reborn</string>
 </dict>
 </plist>
