Add the option to show notification on trigger /  Add the toggle to enable or disable

--- a/control
+++ b/control
@@ -1,4 +1,4 @@
-Package: jp.soh.restats-reborn
+Package: jp.soh.restatsreborn
 Name: ReStats Reborn
 Depends: mobilesubstrate
 Conflicts: com.greeny.autostatisticsreset
