--- a/control
+++ b/control
@@ -2,10 +2,10 @@ Package: jp.soh.restatsreborn
 Name: ReStats Reborn
 Depends: mobilesubstrate
 Conflicts: com.greeny.autostatisticsreset
-Version: 1.2
+Version: 1.3
 Architecture: iphoneos-arm
 Description: Automatically reset Cellular statistics on a certain day! Support iOS7-13
 Maintainer: Soh Satoh
-Author: GreenyDev, CokePokes, Soh Satoh
+Author: GreenyDev, Soh Satoh
 Icon: file:///Library/PreferenceBundles/RCSPrefs.bundle/RCSPrefs@3x.png
 Section: Tweaks
