--- a/rrcsprefs/Resources/RRCSPrefs.plist
+++ b/rrcsprefs/Resources/RRCSPrefs.plist
@@ -22,7 +22,7 @@
             <key>cell</key>
             <string>PSSwitchCell</string>
             <key>default</key>
-            <true/>
+            <false/>
             <key>defaults</key>
             <string>jp.soh.ReStatsReborn</string>
             <key>key</key>
@@ -36,7 +36,7 @@
             <key>cell</key>
             <string>PSSwitchCell</string>
             <key>default</key>
-            <true/>
+            <false/>
             <key>defaults</key>
             <string>jp.soh.ReStatsReborn</string>
             <key>key</key>
